--- a/src/app/search-anime/search/search.component.scss
+++ b/src/app/search-anime/search/search.component.scss
@@ -1,16 +1,16 @@
 .search {
     text-align: center;
-    background: url('/assets/anime-universe.jpeg');
+    background: url('./../../../assets/anime-universe.jpeg');
     background-size: cover;
-    height: 40%;
+    height: 50%;
 }
 
-h2, p {
+h1, p {
     color:beige;
 }
 
 .search-form {
-    margin: 3rem 0rem;
+    margin: 4rem 0rem 5rem 0rem;
 }
 
 .search-input {
@@ -31,5 +31,10 @@ h2, p {
 .search-icon {
     padding-bottom: 0.5rem;
     padding-right: 0.3rem;
+}
+
+.search-text {
+    border: solid;
+    background: rgb(91, 80, 80);
 }
 
